fix 运行平台到2024.1.7