@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'com.caojx'
-version '1.3.7.20250604'
+version '1.3.7.20250607'
 
 repositories {
     maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
@@ -37,11 +37,13 @@ test {
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version = '2021.3.2'
+    version = '2024.1.7'
     plugins = ['java']
+    downloadSources = true
     updateSinceUntilBuild = false
 }
 patchPluginXml {
+    sinceBuild = '193'
     changeNotes = """
     Since 2025年3月7日 by pdkst<br>
     1. 添加表前缀<br>
@@ -86,5 +88,11 @@ patchPluginXml {
       v1.0<br>
       <em>1.Support MySQL</em><br>
       """
+}
+
+runIde {
+    jvmArgs = [
+            '--add-opens', 'java.base/java.io=ALL-UNNAMED'
+    ]
 }
 
